--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
         <section id="work">
             <h2 id="work-link" class="header"> Work </h2>
             <div class="content overlay">
-                <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="optimized-img"
+                <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="optimized-img">
                         <img src="/assets/images/Optimized-Horiseon.png" alt="Horiseon image" width="900px">
                 </a>
-                 <span class="overlaytext"> User Optimization </span>
+                 <span class="overlaytext"> 
+                    <h3>User Optimization</h3> 
+                    <h4> HTML & CSS </h4> 
+                </span>
             </div>
 
         </section>
