modified tags and image source in index and css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <div class="banner">
-            <h2 id="banner-text"> Welcome to my portfolio!</h2>
+            <h2 id="banner-text"> Get to know me!</h2>
         </div>
 
     
@@ -44,13 +44,10 @@
         <section id="work">
             <h2 id="work-link" class="header"> Work </h2>
             <div class="content overlay">
-                <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="optimized-img">
-                        <img src="/assets/images/Optimized-Horiseon.png" alt="Horiseon image" width="900px">
+                <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="css-img"
+                        src="assets/images/Optimized-Horiseon.png" alt="Horiseon image" width="900px">
                 </a>
-                 <span class="overlaytext"> 
-                    <h3>User Optimization</h3> 
-                    <h4> HTML & CSS </h4> 
-                </span>
+                 <span class="overlaytext"> User Optimization <br> HTML & CSS </span>
             </div>
 
         </section>
