modified stylesheet and index files for Contact section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <section id="contact-me">
             <h2 id="contact-link" class="header"> Contact <br> Me </h2>
             <ul>
-                <button id="textButton"><li> (206)-201-9050 </li></button>
-                <button id="textButton"><li> <a href= mail: nhantran1997@icloud.com> nhantran1997@icloud.com </a></li></button>
-                <button id="textButton"><li> <a href= "https://github.com/nathantr97" target="_blank"> Github </a></li></button>
+                <li> (206)-201-9050 </li>
+                <li> <a href= mail: nhantran1997@icloud.com> nhantran1997@icloud.com </a> </li>
+                <li> <a href= "https://github.com/nathantr97" target="_blank"> Github </a> </li>
             </ul>
         </section>
 
