modified overlay text on css-img

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
                 <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="css-img"
                         src="assets/images/Optimized-Horiseon.png" alt="Horiseon image">
                 </a>
-                 <span class="overlaytext"> <h2>User Optimization</h2> 
-                    <br> 
-                    <h4>HTML/CSS</h4> </span>
+                 <span class="overlaytext"> User Optimization <br> HTML/CSS </span>
             </div>
 
         </section>
