--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="css-img"
                         src="assets/images/Optimized-Horiseon.png" alt="Horiseon image">
                 </a>
-                 <span class="overlaytext"> User Optimization <br> HTML/CSS </span>
+                 <span class="overlaytext"> <h2> User Optimization </h2> <br> <h3>HTML/CSS</h3> </span>
             </div>
 
         </section>
