fixed small typo in banner text line 32

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
         <div class="banner">
-            <h2 id="banner-text"> Welcome to my porfolio!</h2>
+            <h2 id="banner-text"> Welcome to my portfolio!</h2>
         </div>
 
         <img class="pfp-img" src="assets/images/pfp.jpg" alt="current profile picture"> 
