--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             
 
         <section id="work">
-            <h2 id="work-link" class="header"> Work </h2>
+            <h2 id="work-link" class="header"> Projects </h2>
             <div class="content overlay">
-                <a href="https://nathantr97.github.io/super-duper-Horiseon-search-engine/" target="_blank"> <img class="css-img"
-                        src="assets/images/Optimized-Horiseon.png" alt="Horiseon image">
+                <a href="https://btay786.github.io/1-project-to-rule/" target="_blank"> <img class="css-img"
+                        src="assets/images/Bookemon.png" alt="Bookemon-Main-Page">
                 </a>
-                 <span class="overlaytext"> <h2> User Optimization </h2> <br> <h3>HTML/CSS</h3> </span>
+                 <span class="overlaytext"> <h2> Digital Bookshelf </h2> <br> <h3>JavaScript/CSS</h3> </span>
             </div>
 
         </section>
