added Jamsess to Porfolio

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                 <a href="https://btay786.github.io/1-project-to-rule/" target="_blank"> <img class="css-img"
                         src="assets/images/Bookemon.png" alt="Bookemon-Main-Page">
                 </a>
-                 <span class="overlaytext"> <h2> Digital Bookshelf </h2> <br> <h3>JavaScript/CSS</h3> </span>
+                 <a href="https://github.com/JpBaer/Jam-Session-Music-Sharing-App" target="_blank"> <img class="css-img"
+                    src="assets/images/jamsess.png" alt="JamSess-Main-Page">
+            </a>
             </div>
 
         </section>
