added third project

--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
                 <a href="https://btay786.github.io/1-project-to-rule/" target="_blank"> <img class="css-img"
                         src="assets/images/Bookemon.png" alt="Bookemon-Main-Page">
                 </a>
-                 <a href="https://github.com/JpBaer/Jam-Session-Music-Sharing-App" target="_blank"> <img class="css-img"
+                <a href="https://calm-tor-47120.herokuapp.com/" target="_blank"> <img class="css-img"
                     src="assets/images/jamsess.png" alt="JamSess-Main-Page">
             </a>
+            <a href="https://four-rusty-bucket.herokuapp.com/" target="_blank"> <img class="css-img"
+                src="assets/images/Rusty-bucket.PNG" alt="Rusty-Bucket-Homepage">
+        </a>
             </div>
 
         </section>
